--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "flash": "^1.1.0",
     "joi": "^17.4.2",
     "method-override": "^3.0.0",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   }
 }
