--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
     "express-session": "^1.17.2",
     "flash": "^1.1.0",
+    "helmet": "^4.6.0",
     "joi": "^17.4.2",
     "method-override": "^3.0.0",
     "mkdirp": "^1.0.4",
@@ -27,6 +29,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "sanitize-html": "^2.6.0"
   }
 }
